2026-02-03T02:44:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21614783801 # 866
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-03
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 1155 1635 / 1159 1639
* notice: next accum: outdated-unq outdated-all / unq all: 1156 1636 / 1159 1639
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-16] / []

2026-02-01T03:14:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21555660806 # 864
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-01
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 1155 1635 / 1159 1639
* notice: next accum: outdated-unq outdated-all / unq all: 1155 1635 / 1159 1639
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-13 2026-01-14 2026-01-15] / []

2026-01-30T02:37:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21502400423 # 862
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-30
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 1152 1632 / 1155 1635
* notice: next accum: outdated-unq outdated-all / unq all: 1155 1635 / 1159 1639
* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -0 -0 / +1 +1 -0 -0 / 1 1