@@ -1,10 +1,19 @@
 {
-  "timestamp" : "2026-02-03T02:44:10Z",
+  "timestamp" : "2026-02-04T02:38:42Z",
   "count_outdated" : 1636,
   "uniques_outdated" : 1156,
-  "count" : 1639,
-  "uniques" : 1159,
+  "count" : 1640,
+  "uniques" : 1160,
   "clones" : [
+    {
+      "timestamp": "2026-01-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
     {
       "timestamp": "2026-01-17T00:00:00Z",
       "count": 0,
@@ -115,15 +124,6 @@
     },
     {
       "timestamp": "2026-01-29T00:00:00Z",
-      "count": 0,
-      "count_minmax": [ 0, 0 ],
-      "count_decinc": [ 0, 0 ],
-      "uniques": 0,
-      "uniques_minmax": [ 0, 0 ],
-      "uniques_decinc": [ 0, 0 ]
-    },
-    {
-      "timestamp": "2026-01-30T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
