@@ -1,7 +1,12 @@
 {
-  "count": 3,
-  "uniques": 3,
+  "count": 4,
+  "uniques": 4,
   "clones": [
+    {
+      "timestamp": "2026-01-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
     {
       "timestamp": "2026-01-17T00:00:00Z",
       "count": 0,
@@ -64,11 +69,6 @@
     },
     {
       "timestamp": "2026-01-29T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-01-30T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
