@@ -1,3 +1,12 @@
+2026-02-04T02:38:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21656245194 # 867
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-04
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 1156 1636 / 1159 1639
+* notice: next accum: outdated-unq outdated-all / unq all: 1156 1636 / 1160 1640
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-02-03T02:44:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21614783801 # 866
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-03
